# skim

./: .rustfmt.toml  Cargo.toml
examples/: custom_item.rs  custom_keybinding_actions.rs  downcast.rs  nth.rs  option_builder.rs
src/: ansi.rs  field.rs  global.rs  header.rs  input.rs  item.rs  lib.rs  matcher.rs  model.rs  options.rs  orderedvec.rs  prelude.rs  previewer.rs  query.rs  reader.rs  selection.rs  spinlock.rs  theme.rs  util.rs
src/engine/: exact.rs  factory.rs  fuzzy.rs
src/helper/: item_reader.rs  selector.rs
