[package]
name = "skim"
version = "0.10.2"
authors = ["Zhang Jinzhou <lotabout@gmail.com>"]
description = "Fuzzy Finder in rust!"
documentation = "https://docs.rs/skim"
homepage = "https://github.com/lotabout/skim"
repository = "https://github.com/lotabout/skim"
readme  = "README.md"
keywords = ["fuzzy", "menu", "util"]
license = "MIT"
edition = "2021"

[lib]
name = "skim"
path = "src/lib.rs"

[[bin]]
name = "sk"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1"
nix = "0.26"
atty = { version = "0.2.14", optional = true }
regex = "1.6.0"
lazy_static = "1.4.0"
shlex = { version = "1.1.0", optional = true }
unicode-width = "0.1.9"
log = "0.4.17"
env_logger = { version = "0.10", optional = true }
time = "0.3.13"
clap = { version = "4.1", optional = true, features = ["cargo", "deprecated", "wrap_help"] }
tuikit = "0.4.6"
vte = "0.11.0"
fuzzy-matcher = "0.3.7"
rayon = "1.5.3"
derive_builder = "0.12"
bitflags = "2.4.0"
timer = "0.2.0"
chrono = "0.4.22"
crossbeam = "0.8.2"
beef = "0.5.2" # compact cow
defer-drop = "1.2.0"
thiserror = "1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:atty", "dep:shlex", "dep:env_logger"]
# use custom spinlock implemented instead of std::sync::Mutex
spinlock = []
